// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BOT_CHANNEL_CHOICE updates to expected state 1`] = `
Array [
  Object {
    "type": "channelChoice",
  },
]
`;

exports[`BOT_FEEDBACK updates to expected state 1`] = `
Array [
  Object {
    "isVisitor": true,
    "timestamp": 123456,
    "type": "feedback",
  },
]
`;

exports[`BOT_FEEDBACK_REQUESTED updates to expected state 1`] = `
Array [
  Object {
    "type": "feedbackRequested",
  },
]
`;

exports[`BOT_TYPING updates to expected state 1`] = `
Array [
  Object {
    "timestamp": 123456,
    "type": "botTyping",
  },
]
`;

exports[`QUESTION_SUBMITTED_FULFILLED updates to expected state 1`] = `
Array [
  Object {
    "timestamp": 123456,
    "type": "results",
  },
]
`;

exports[`QUESTION_VALUE_SUBMITTED updates to expected state 1`] = `
Array [
  Object {
    "isVisitor": true,
    "message": "Surely not EVERYONE was kung fu fighting.",
    "timestamp": 123456,
  },
]
`;
